@@ -95,7 +95,7 @@ public class MergSD2SignalHead extends DefaultSignalHead {
             updateOutput();
 		
             // notify listeners, if any
-            firePropertyChange("Appearance", new Integer(oldAppearance), new Integer(newAppearance));
+            firePropertyChange("Appearance", Integer.valueOf(oldAppearance), Integer.valueOf(newAppearance));
         }
         
     }
